--- a/index.html
+++ b/index.html
@@ -99,17 +99,17 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										0909 Somewhere Rd.<br />
+										屏東縣麟洛鄉,田中村 中和街<br />
+										Taiwan
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										098-587-5753
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">a0985875753@gmail.com</a>
 									</li>
 								</ul>
 							</div>
